--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/react": "^3.1.1",
     "@next/mdx": "^15.5.3",
     "@once-ui-system/core": "^1.4.31",
+    "@tanstack/react-query": "^5.90.16",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.13.0",
     "@types/react": "19.0.8",
@@ -25,6 +26,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "gray-matter": "^4.0.3",
+    "js-cookie": "^3.0.5",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.544.0",
     "next": "^15.5.3",
@@ -41,6 +43,7 @@
     "@tailwindcss/postcss": "^4.0.3",
     "@tailwindcss/typography": "^0.5.16",
     "@types/aos": "^3.0.7",
+    "@types/js-cookie": "^3.0.6",
     "eslint": "^9.35.0",
     "eslint-config-next": "^15.2.2",
     "eslint-plugin-prettier": "^5.5.4",
